sklearn/src/cblas/cblas.h

   typedef enum {CblasRowMajor=101, CblasColMajor=102 } CBLAS_ORDER;
   typedef enum {CblasNoTrans=111, CblasTrans=112, CblasConjTrans=113,
                         AtlasConj=114} CBLAS_TRANSPOSE;
   typedef enum {CblasUpper=121, CblasLower=122} CBLAS_UPLO;
   typedef enum {CblasNonUnit=131, CblasUnit=132} CBLAS_DIAG;
void cblas_dtrsv(const CBLAS_ORDER Order, const CBLAS_UPLO Uplo,
                 const CBLAS_TRANSPOSE TransA, const CBLAS_DIAG Diag,
                 const int N, const double *A, const int lda, double *X,
                 const int incX);